# olala

./: .gitignore  CLAUDE.md  CMakeLists.txt
cmake/: olala-utils.cmake
include/olala/: action.h  adaptable.h  adaptableexception.h  error.h  inputsequence.h  inputsequencestream.h  inputstream.h  inputstreamstream.h  lookaheadstate.h  lookaheadstateptr.h  parsercontext.h  semanticstack.h  sourcelocation.h  symbol.h  symbolaction.h  symbolactionable.h  symbolalternation.h  symbolcontainer.h  symboldouble.h  symbolepsilon.h  symbolidentifier.h  symbolinteger.h  symbolnonterminal.h  symbolptr.h  symbolsequence.h  symbolterminal.h  symbolwhitespace.h  value.h  valuedouble.h  valueinteger.h  valueptr.h  valuestring.h
src/: adaptable.cpp  adaptableexception.cpp  error.cpp  inputsequence.cpp  inputsequencestream.cpp  inputstream.cpp  inputstreamstream.cpp  lookaheadstate.cpp  parsercontext.cpp  semanticstack.cpp  sourcelocation.cpp  symbol.cpp  symbolaction.cpp  symbolactionable.cpp  symbolalternation.cpp  symbolcontainer.cpp  symboldouble.cpp  symbolepsilon.cpp  symbolidentifier.cpp  symbolinteger.cpp  symbolnonterminal.cpp  symbolsequence.cpp  symbolterminal.cpp  symbolwhitespace.cpp  value.cpp  valuedouble.cpp  valueinteger.cpp  valuestring.cpp
test/: CMakeLists.txt  symboldouble.cpp  symbolidentifier.cpp  symbolinteger.cpp  symbolwhitespace.cpp
